--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,3 +120,15 @@ body {
     border-top: 1px solid #F2F2F2;
     margin-top: 20px;
 }
+
+.banner {
+    display: flex;
+    justify-content: center;
+}
+
+.banner img {
+    margin: 10px;
+    border-radius: 10px;
+    max-width: 600px;
+    width: 50%;
+}
