--- a/assets/css/cadastro_card_style.css
+++ b/assets/css/cadastro_card_style.css
@@ -3,12 +3,86 @@
 
 body {
     font-family: Arial, sans-serif;
-    color: white;
+    color: black;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-    background-image: url('../img/CadastroBG.jpg');
+    background-image: url('../img/fundo/CadastroBG.jpg');
     background-size: cover;
     background-attachment: fixed;
+}
+
+#login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.card {
+    background-color: rgba(252, 255, 254, 0.7);
+    padding: 25px;
+    border-radius: 20px;
+    width:280px;
+}
+
+.card-header {
+    padding-bottom: 30px ;
+    font-size: 33px;
+    text-align: center;
+    color: #000c1c;
+}
+
+.card-content label {
+    color: #000c1c;
+    font-size: 20px;
+}
+
+.card-content-area {
+    display: flex;
+    flex-direction: column;
+    padding:10px 0;
+}
+
+.card-content-area input {
+    font-size: 18px;
+    margin-top: 10px;
+    padding:0 5px;
+    background-color: transparent;
+    border:none;
+    border-bottom: 1px solid #000c1c;
+    outline: none;
+    color: #000c1c;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.card-footer {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-footer .submit{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    width: 100%;
+    height: 40px;
+    background-color: #0198b6;
+    font-size: 18px;
+    border-radius: 10px;
+    border:none;
+    color:#000c1c;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.card-footer label {
+    text-align: center;
+    font-size: 20px;
+}
+
+.card-footer a {
+    color: #2f3ba1;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
 }
