--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,8 @@ body {
     align-items: center;
 }
 .header .logo img {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     margin-right: 10px;
 }
@@ -89,7 +89,7 @@ body {
 
 
 .footer {
-    background-color: #210D26;
+    background-color: #333333;
     color: #F2F2F2;
     padding: 15px 0;
 }
