--- a/assets/css/planos_style.css
+++ b/assets/css/planos_style.css
@@ -13,13 +13,27 @@ h2 {
     margin-left: 20px;
 }
 
+h3 {
+    font-size: 25px;
+}
+
+span {
+    font-size: 30px;
+}
+
 #planos {
     border-radius: 15px;
     margin-top: 60px;
-    margin-left: 17%;
+    margin-left: 12%;
     background-color:rgba(0, 0, 0, 0.5);    
-    width: 1000px;
+    width: 1200px;
     max-width: 1300px;
+}
+
+.plano_card {
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
 }
 
 .card {
@@ -32,6 +46,11 @@ h2 {
     display: flex;
     font-size: 14px;
     text-align: start;
+}
+
+.card-content-area {
+    display: flex;
+    
 }
 
 .card-content-area img {
