--- a/assets/css/cadastro_card_style.css
+++ b/assets/css/cadastro_card_style.css
@@ -81,7 +81,7 @@ body {
 }
 
 .card-footer a {
-    color: #2f3ba1;
+    color: #98a4ff;
     font-size: 15px;
     text-align: center;
     text-decoration: none;
