--- a/assets/css/login_card_style.css
+++ b/assets/css/login_card_style.css
@@ -81,8 +81,8 @@ body {
 }
 
 .card-footer a {
-    color: #2f3ba1;
-    font-size: 15px;
+    color: #98a4ff;
+    font-size: 17px;
     text-align: center;
     text-decoration: none;
 }
