--- a/assets/css/planos_style.css
+++ b/assets/css/planos_style.css
@@ -9,6 +9,10 @@ body {
     background-attachment: fixed;
 }
 
+h1 {
+    margin-top: -7px;
+}
+
 h2 {
     margin-left: 20px;
 }
@@ -21,9 +25,22 @@ span {
     font-size: 30px;
 }
 
+button {
+    padding: 4px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 8px;
+    border-style: none;
+    margin-top: 15px;
+    border-width: 3px;
+    color: aliceblue;
+    border-color: linear-gradient(to right, #4f3fe2, #8378e4);
+    background: linear-gradient(to right, #4f3fe2, #8378e4);
+}
+
 #planos {
     border-radius: 15px;
-    margin-top: 60px;
+    margin-top: 13px;
     margin-left: 12%;
     background-color:rgba(0, 0, 0, 0.5);    
     width: 1200px;
