--- a/assets/css/overlay_style.css
+++ b/assets/css/overlay_style.css
@@ -1,40 +1,107 @@
-.overlay {
-    position: fixed; /* Fica fixo na tela */
-    top: 50;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #1d103e; /* Fundo escuro semi-transparente */
-    display: none; /* Inicialmente escondido */
-    z-index: 1000; /* Garante que fique acima de outros elementos */
-    justify-content: center;
-    align-items: center;
+.overlay-content {
+    display: flex;
+    background: aliceblue;
+    color: #000;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 15px;
+    width: 90%;
+    max-width: 800px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
-.overlay-conteudo {
-    background-color: aliceblue;
+.fatura {
+    flex: 1;
+    background-color: #f9f9f9;
+    border-radius: 10px;
     padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 500px;
-    animation: fadeIn 0.3s;
+    font-size: 14px;
 }
 
-.fechar {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 28px;
+.fatura h3 {
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+
+.fatura .linha {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.fatura .total {
+    display: flex;
+    justify-content: space-between;
     font-weight: bold;
+    color: #007bff;
+}
+
+.fatura .valor {
+    font-size: 18px;
+}
+
+.pagamento-form {
+    padding: 20px;
+    border-radius: 8px;
+    background-color: aliceblue;
+    flex: 1;
+}
+
+.pagamento-form h3 {
+    margin-bottom: 10px;
+}
+
+.bandeiras {
+    background-image: white;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.bandeiras img {
+    height: 90px;
+}
+
+.pagamento-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.pagamento-form input[type="text"] {
+    padding: 10px;
+    margin-bottom: 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+}
+
+.row {
+    display: flex;
+    gap: 10px;
+}
+
+.realizarPagamento,
+.fecharOverlay {
+    margin-top: 10px;
+    padding: 12px;
+    font-size: 15px;
+    border: none;
+    border-radius: 8px;
     cursor: pointer;
+    color: aliceblue;
 }
 
-
-@keyframes fadeIn {
-    from {opacity: 0; transform: translateY(-60px);}
-    to {opacity: 1; transform: translateY(0);}
+.realizarPagamento {
+    background-color: #96d63c;
 }
 
-.body-overlay-aberto {
-    overflow: hidden;
+.fecharOverlay {
+    background-color: #9c140b;
+}
+
+.realizarPagamento:hover {
+    background-color: #6fb012;
+}
+
+.fecharOverlay:hover {
+    background-color: #760a06;
 }
