--- a/assets/css/planos_style.css
+++ b/assets/css/planos_style.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
-body {    
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+body {
+    font-family: 'Lucida Sans', sans-serif;
     text-align: center;
-    color:aliceblue;
+    color: aliceblue;
     background-image: url('../img/fundo/PlanosBG.jpg');
     background-size: cover;
     background-attachment: fixed;
@@ -32,9 +30,7 @@ button {
     border-radius: 8px;
     border-style: none;
     margin-top: 15px;
-    border-width: 3px;
     color: aliceblue;
-    border-color: linear-gradient(to right, #4f3fe2, #8378e4);
     background: linear-gradient(to right, #4f3fe2, #8378e4);
 }
 
@@ -42,7 +38,7 @@ button {
     border-radius: 15px;
     margin-top: 13px;
     margin-left: 12%;
-    background-color:rgba(0, 0, 0, 0.5);    
+    background-color: rgba(0, 0, 0, 0.5);
     width: 1200px;
     max-width: 1300px;
 }
@@ -67,9 +63,48 @@ button {
 
 .card-content-area {
     display: flex;
-    
 }
 
 .card-content-area img {
     max-width: 290px;
+}
+
+.overlay {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #201942;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: transform 0.4s ease-in-out;
+    transform: translateY(100%);
+    z-index: 999;
+}
+
+.overlay.ativo {
+    transform: translateY(0);
+}
+
+.abrirOverlay,
+.fecharOverlay,
+.realizarPagamento {
+    margin: 4px;
+    padding: 4px 12px;
+    font-size: 18px;
+    background: #7b68ee;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.abrirOverlay:hover,
+.fecharOverlay:hover,
+.realizarPagamento:hover {
+    background: #5d4eb3;
 }
